--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
     <h1>Books</h1>
 
-    <button type="button" id="btnPrevious">&lt;</button>
+    <button type="button" id="btnPrevious" class="btn btn-secondary">&lt;</button>
     <span id="pageButtons"></span>
-    <button type="button" id="btnNext">&gt;</button>
+    <button type="button" id="btnNext" class="btn btn-secondary">&gt;</button>
 
-    <table class="steelBlueCols">
+    <table >
       <thead>
         <tr>
           <th>Id</th>
