--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <!-- HEADER -->
     <header class="jumbotron">
       <h1 class="display-4">Book Database</h1>
-      <p class="lead">A simple pagination example.</p>
+      <p class="lead">
+        A simple pagination example with vanilla JavaScript DOM manipulation and
+        <a href="https://getbootstrap.com/">
+          Bootstrap.
+        </a>
+      </p>
     </header>
 
     <!-- PAGINATION CONTROLS -->
